force-app/main/default/objects/Account/fields/Communication_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Communication_Preferences__c</fullName>
    <label>Communication Preferences</label>
    <type>TextArea</type>
</CustomField>