force-app/main/default/objects/Account/fields/Course_at_Previous_School__c.field-meta.xml
<CustomField>
    <fullName>Course_at_Previous_School__c</fullName>
    <label>Course at Previous School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>