force-app/main/default/objects/Account/fields/Course_Enrolled_In__c.field-meta.xml
<CustomField>
    <fullName>Course_Enrolled_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Enrolled In</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>