force-app/main/default/objects/Account/fields/Courses_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Courses_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courses Assigned</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Accounts (Courses Assigned)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>