force-app/main/default/objects/Account/fields/Current_GPA__c.field-meta.xml
<CustomField>
    <fullName>Current_GPA__c</fullName>
    <label>Current GPA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>