force-app/main/default/objects/Account/fields/High_School_Address__c.field-meta.xml
<CustomField>
    <fullName>High_School_Address__c</fullName>
    <label>High School Address</label>
    <type>Address</type>
</CustomField>