force-app/main/default/objects/Account/fields/High_School_Attended__c.field-meta.xml
<CustomField>
    <fullName>High_School_Attended__c</fullName>
    <label>High School Attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>