force-app/main/default/objects/Account/fields/Photo_for_ID__c.field-meta.xml
<CustomField>
    <fullName>Photo_for_ID__c</fullName>
    <label>Photo for ID</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>