force-app/main/default/objects/Account/fields/Previous_School_University__c.field-meta.xml
<CustomField>
    <fullName>Previous_School_University__c</fullName>
    <label>Previous School/University</label>
    <length>255</length>
    <type>Text</type>
</CustomField>