force-app/main/default/objects/Account/fields/Primary_School_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_School_Address__c</fullName>
    <label>Primary School Address</label>
    <type>Address</type>
</CustomField>