force-app/main/default/objects/Account/fields/Primary_School_Attended__c.field-meta.xml
<CustomField>
    <fullName>Primary_School_Attended__c</fullName>
    <label>Primary School Attended</label>
    <length>255</length>
    <type>Text</type>
</CustomField>