force-app/main/default/objects/Account/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>Qualifications</label>
    <type>TextArea</type>
</CustomField>