force-app/main/default/objects/Account/fields/Relationship_to_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Emergency_Contact__c</fullName>
    <label>Relationship to Emergency Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>