force-app/main/default/objects/Account/fields/Research_Interests__c.field-meta.xml
<CustomField>
    <fullName>Research_Interests__c</fullName>
    <label>Research Interests</label>
    <type>TextArea</type>
</CustomField>