force-app/main/default/objects/Account/fields/Scholarship_Status__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Status__c</fullName>
    <label>Scholarship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partial Scholarship</fullName>
            </value>
            <value>
                <fullName>Full Scholarship</fullName>
            </value>
            <value>
                <fullName>Pending Application</fullName>
            </value>
            <value>
                <fullName>Awarded</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>