force-app/main/default/objects/Account/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Semester</fullName>
            </value>
            <value>
                <fullName>2nd Semester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>