force-app/main/default/objects/Account/fields/Year_Graduated_from_Primary_School__c.field-meta.xml
<CustomField>
    <fullName>Year_Graduated_from_Primary_School__c</fullName>
    <label>Year Graduated from Primary School</label>
    <type>Date</type>
</CustomField>