force-app/main/default/objects/Account/fields/Year_Level__c.field-meta.xml
<CustomField>
    <fullName>Year_Level__c</fullName>
    <label>Year Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Year</fullName>
            </value>
            <value>
                <fullName>2nd Year</fullName>
            </value>
            <value>
                <fullName>3rd Year</fullName>
            </value>
            <value>
                <fullName>4th Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>