force-app/main/default/objects/Account/recordTypes/Admin_Account.recordType-meta.xml
<RecordType>
    <fullName>Admin_Account</fullName>
    <active>true</active>
    <label>Admin Account</label>
</RecordType>