force-app/main/default/objects/Account/recordTypes/Department_Head_Account.recordType-meta.xml
<RecordType>
    <fullName>Department_Head_Account</fullName>
    <active>true</active>
    <label>Department Head Account</label>
</RecordType>