force-app/main/default/objects/Account/recordTypes/Instructor_Account.recordType-meta.xml
<RecordType>
    <fullName>Instructor_Account</fullName>
    <active>true</active>
    <label>Instructor Account</label>
</RecordType>